--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles.css">
-  <script src="./script.js" defer></script>
-  <title>Tic Tac Toe</title>
-</head>
-<body>
-  <div class="container"></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <script src="./script.js" defer></script>
+    <title>Tic Tac Toe</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="players">
+        <form>
+          <input
+            type="text"
+            name="player1"
+            id="player1"
+            placeholder="Player 1 Name"
+            value="player1"
+          />
+          <input
+            type="text"
+            name="player2"
+            id="player2"
+            placeholder="Player 2 Name"
+            value="player2"
+          />
+          <button type="submit">Play</button>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
