Refactor player input fields and styling

--- a/index.html
+++ b/index.html
@@ -15,17 +15,15 @@
             type="text"
             name="player1"
             id="player1"
-            placeholder="Player 1 Name"
-            value="player1"
+            placeholder="Player 1"
           />
           <input
             type="text"
             name="player2"
             id="player2"
-            placeholder="Player 2 Name"
-            value="player2"
+            placeholder="Player 2"
           />
-          <button type="submit">Play</button>
+          <button class="btn" type="submit">Play</button>
         </form>
       </div>
     </div>
